--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="/javascripts/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/scripts/bootstrap.min.js"></script>
