--- a/views/stores/find-store.ejs
+++ b/views/stores/find-store.ejs
@@ -19,10 +19,10 @@
         </label>
         <div class="form-group col-sm-10">
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="view" id="view1" value="json" checked="checked"> json
+            <input class="form-check-input" type="radio" name="view" id="view1" value="json" > json
           </label>
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="view" id="view2" value="map"> map
+            <input class="form-check-input" type="radio" name="view" id="view2" value="map" checked="checked"> map
           </label>
         </div>
       </div>
@@ -52,13 +52,15 @@
         position: {lat: <%= lat %>, lng: <%= lng %>},
         map: map
       });
-      <% stores.forEach(function(store){ %>
+      <% if(typeof stores != 'undefined' && stores != null) {
+        stores.forEach(function(store){ %>
         new google.maps.Marker({
           title: "<%= store.name %>",
           position: {lat: <%= store.coordinates.lat %>, lng: <%= store.coordinates.lng %> },
           map: map
         });
-      <% }); %>
+        <% });
+      } %>
 
     }
   </script>
