--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,5 +7,11 @@
   <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+  <style>
+    @font-face {
+      font-family: "MaterialIcons Regular";
+      src: url(/fonts/MaterialIcons-Regular.ttf);
+    }
+  </style>
 
 </head>
