--- a/views/stores/find-store.ejs
+++ b/views/stores/find-store.ejs
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <%- include('../partials/head') %>
+
+  <style>
+    .store{
+      padding:1em;
+      border-bottom:1px solid #eee;
+    }
+    .store_name{
+      font-weight:bolder;
+    }
+  </style>
   <body>
     <h1><%= title %></h1>
 
@@ -35,10 +45,23 @@
       </div>
     </form>
 
-    <div id="map" style="width:100%;height:400px;"></div>
-
-
-
+    <div class="clearfix"></div>
+      <div id="map" style="height:400px;" class="col-xs-6"></div>
+      <div class="col-xs-6">
+        <% if(typeof stores != 'undefined' && stores != null) {
+          for(let i=0; i<stores.length;i++) { %>
+            <div class="row store">
+              <div class="store_name col-xs-6"><%= stores[i].name %></div>
+              <div class="store_address col-xs-6">
+                <%= stores[i].address.addr1 %><br/>
+                <%= stores[i].address.city + ", " + stores[i].address.state + " " + stores[i].address.postalCode %></br>
+                <%= stores[i].tel %>
+              </div>
+            </div>
+          <% }
+        } %>
+      </div>
+    <div class="clearfix"></div>
 
   </body>
   <script>
@@ -50,7 +73,24 @@
       });
       new google.maps.Marker({
         position: {lat: <%= lat %>, lng: <%= lng %>},
-        map: map
+        map: map,
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          scale: 5
+        },
+        /*icon: {
+          path: 'M 125,5 155,90 245,90 175,145 200,230 125,180 50,230 75,145 5,90 95,90 z',
+          fillColor: 'yellow',
+          fillOpacity: 0.8,
+          scale: 1,
+          strokeColor: 'gold',
+          strokeWeight: 14
+        },*/
+        /*label:{
+          fontFamily:'MaterialIcons Regular',
+          text:'gps_not_fixed'
+        },*/
+        //icon:'none',
       });
       <% if(typeof stores != 'undefined' && stores != null) {
         stores.forEach(function(store){ %>
