bootstrap 4 components to views

--- a/views/stores/add-store.ejs
+++ b/views/stores/add-store.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <%- include('../partials/head') %>
-  <body>
+  <body class='container'>
     <h1><%= title %></h1>
     <form action='/stores' method="post">
       <label>Name:</label>
@@ -33,7 +33,7 @@
       <input type='text' name='state'/><br/>
       <label>Postal Code:</label>
       <input type='text' name='postalCode'/><br/>-->
-      <input type='submit' value="Submit"/>
+      <input type='submit' value="Submit" class="btn btn-primary"/>
     </form>
 
     <br/><br/>
@@ -45,5 +45,7 @@
       src="https://www.google.com/maps/embed/v1/place?key=<%= apiKey %>
         &q=<%= address.formattedAddress %>&center=<%= address.location.lat + ',' + address.location.lng %>" allowfullscreen>
     </iframe>
+
+    <%- include('../partials/footer') %>
   </body>
 </html>
