--- a/views/stores/find-store.ejs
+++ b/views/stores/find-store.ejs
@@ -14,7 +14,7 @@
       font-weight:bolder;
     }
   </style>
-  <body>
+  <body class='container'>
     <h1><%= title %></h1>
 
     <button onclick="getLocation()" class='btn btn-secondary'>Use Current Location</button>
@@ -36,25 +36,21 @@
         </select>
       </div>
 
-      <!--<div class="form-check form-check-inline">
-        <label class="col-xs-12 col-sm-2 text-right">
-          View:
-        </label>
-        <div class="form-group col-sm-10">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="view" id="view1" value="json" > json
-          </label>
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="view" id="view2" value="map" checked="checked"> map
-          </label>
-        </div>
-      </div>-->
+      <label class="col-xs-12 col-sm-2 text-right">Checkbox food/drink type:</label>
+      <div class="form-group col-sm-10">
+      </div>
 
-      <div class="form-group">
+      <label class="col-xs-12 col-sm-2 text-right">outlets/wifi:</label>
+      <div class="form-group col-sm-10">
+      </div>
+
+
+      <div class="col-xs-12 ml-auto col-sm-10 ">
         <input type='submit' value="Submit" class="btn btn-primary"/>
       </div>
     </form>
 
+    <hr/>
     <div class="container">
       <div class='row'>
         <div id="map" style="height:400px;" class="col col-xs-6"></div>
