register new user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,9 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <ul>
+      <li><a href="/register">Register</a></li>
+    </ul>
+    <ul>
       <li><a href="/search-address">search-address to add</a></li>
       <li><a href="/stores">get all stores</a></li>
       <li><a href="/find-store">find store</a></li>
