--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-    <!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
-
-  </head>
+  <%- include partials/head %>
   <body>
+    %>
+    <%- include partials/menu %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <ul>
-      <li><a href="/register">Register</a></li>
-    </ul>
-    <ul>
-      <li><a href="/search-address">search-address to add</a></li>
-      <li><a href="/stores">get all stores</a></li>
-      <li><a href="/find-store">find store</a></li>
-    </ul>
+
   </body>
 </html>
