--- a/views/stores/find-store.ejs
+++ b/views/stores/find-store.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <%- include('../partials/head') %>
+  <%- include ../partials/head %>
+  <%- include ../partials/menu %>
 
   <style>
     .store:first{
