--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,13 +4,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= title %></title>
+  <title><%= (typeof title === 'undefined') ? "" : title %></title>
   <!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
   <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
   <style>
     @font-face {
       font-family: "MaterialIcons Regular";
       src: url(/fonts/MaterialIcons-Regular.ttf);
+    }
+    body{
+      padding-top:3em;
     }
   </style>
 
