--- a/views/stores/view-store.ejs
+++ b/views/stores/view-store.ejs
@@ -1,3 +1,20 @@
-store info
-<br/>
-<%= store %>
+<html>
+<%- include ../partials/head %>
+
+<body>
+<%- include ../partials/menu %>
+
+<div class='container'>
+  <h1><%= store.name %></h1>
+  <h3><%= store.address %></h3>
+  <div><%= store.website %></div>
+  <br/>
+
+  <%= store %>
+</div>
+
+<%- include ../partials/footer %>
+
+</body>
+
+</html>
