added models and menu collapse

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,12 @@
 <html>
   <%- include partials/head %>
   <body>
-    %>
     <%- include partials/menu %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <div class='container'>
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
+    </div>
 
   </body>
 </html>
