--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,24 +1,29 @@
-<nav class="navbar navbar-expand-md fixed-top">
-
-  <div class="collapse navbar-collapse container">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a class="nav-link" href="//localhost:3000">HOME</a></li>
-      <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-      <li class="nav-item"><a class="nav-link" href="/search-address">search-address to add</a></li>
-      <li class="nav-item"><a class="nav-link" href="/stores">dump all store data</a></li>
-      <li class="nav-item"><a class="nav-link" href="/find-store">Find Store</a></li>
-      <!--<li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button">
-          Funding Reports<span class="caret"></span></a>
-        <ul class='dropdown-menu'>
-          <li><a href="/getFundedFiles">Funded Files</a></li>
-          <li><a href="/getLoansNotPurchased">Loans Not Purchsed</a></li>
-        </ul>
-      </li>-->
-    </ul>
-    <ul class="nav navbar-nav navbar-right ">
-      <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-      <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-    </ul>
+<nav class="navbar navbar-expand-md fixed-top bg-light navbar-light">
+  <div class='container'>
+    <a class="navbar-brand" href="#">Drink</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navBar">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+        <li class="nav-item"><a class="nav-link" href="/search-address">Add Store</a></li>
+        <li class="nav-item"><a class="nav-link" href="/stores">Data Dump</a></li>
+        <li class="nav-item"><a class="nav-link" href="/find-store">Find Store</a></li>
+        <!--<li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button">
+            Funding Reports<span class="caret"></span></a>
+          <ul class='dropdown-menu'>
+            <li><a href="/getFundedFiles">Funded Files</a></li>
+            <li><a href="/getLoansNotPurchased">Loans Not Purchsed</a></li>
+          </ul>
+        </li>-->
+      </ul>
+      <ul class="nav navbar-nav navbar-right ">
+        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
