--- a/views/partials/menu-admin.ejs
+++ b/views/partials/menu-admin.ejs
@@ -1,13 +1,15 @@
 <nav class="navbar navbar-expand-md fixed-top bg-light navbar-light">
   <div class='container'>
-    <a class="navbar-brand" href="#">Drink</a>
+    <a class="navbar-brand" href="/admin/">Drink - Admin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navBar">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
-        <li class="nav-item"><a class="nav-link" href="/find-store">Find Store</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/search-address">Add Store</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/store">Data Dump</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/find-store">Find Store</a></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button">
             Funding Reports<span class="caret"></span></a>
@@ -21,7 +23,7 @@
         <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/">admin</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Public View</a></li>
       </ul>
     </div>
   </div>
