--- a/views/stores/edit-store.ejs
+++ b/views/stores/edit-store.ejs
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html>
   <%- include('../partials/head') %>
-  <style>
-    form label {
-      clear:left;
-    }
-  </style>
-  <body class='container'>
+  <body>
 
     <%- include ../partials/menu-admin %>
 
     <div class='container'>
       <form action='store' method="post">
-        <div class='form-group row'>
-          <label class="col-sm-2 col-form-label">Name:</label>
+        <div>
+          <label>Name:</label>
           <div class='col'>
             <input type='text' name='storeName' value="<%= store.name %>" class="form-control"/>
           </div>
         </div>
-        <label>Address:</label>
-        <input type="text" name='addr1' value='<%= store.address.addr1 %>'/>
-        <label>City: </label>
-        <input type="text" name='city' value='<%= store.address.city %>'/>
-        <label>State:</label>
-        <input type="text" name='state' value='<%= store.address.state %>'/>
-        <label>Postal Code:</label>
-        <input type="text" name='postalCode' value='<%= store.address.postalCode %>'/>
-        <input type='submit' value="Submit" class='btn btn-primary'/>
+        <div>
+          <label>Address:</label>
+          <input type="text" name='addr1' value='<%= store.address.addr1 %>'/>
+        </div>
+        <div>
+          <label>City: </label>
+          <input type="text" name='city' value='<%= store.address.city %>'/>
+        </div>
+        <div>
+          <label>State:</label>
+          <input type="text" name='state' value='<%= store.address.state %>'/>
+        </div>
+        <div>
+          <label>Postal Code:</label>
+          <input type="text" name='postalCode' value='<%= store.address.postalCode %>'/>
+        </div>
+
+        <input type='submit' value="Submit" class='col-form-submit btn btn-primary'/>
 
       </form>
 
       <br/><br/>
 
     </div>
-    <%- include('../partials/footer') %>
+    <%- include ../partials/footer %>
+    <%- include ../partials/formFormatter %>
   </body>
 </html>
