--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md fixed-top bg-light navbar-light">
   <div class='container'>
-    <a class="navbar-brand" href="#">Drink</a>
+    <a class="navbar-brand" href="/">Drink</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
