--- a/views/stores/search-address.ejs
+++ b/views/stores/search-address.ejs
@@ -6,17 +6,26 @@
     <div class='container'>
       <h1><%= title %></h1>
       <form action='validate-address' method="get">
-        <label>Address:</label>
-        <input type='text' name='address'/><br/>
-        <label>City: </label>
-        <input type='text' name='city'/><br/>
-        <label>State:</label>
-        <input type='text' name='state'/><br/>
-        <label>Postal Code:</label>
-        <input type='text' name='postalCode'/><br/>
+        <div>
+          <label>Address:</label>
+          <input type='text' name='address'/>
+        </div>
+        <div>
+          <label>City: </label>
+          <input type='text' name='city'/>
+        </div>
+        <div>
+          <label>State:</label>
+          <input type='text' name='state'/>
+        </div>
+        <div>
+          <label>Postal Code:</label>
+          <input type='text' name='postalCode'/>
+        </div>
         <input type='submit' value="Submit" class='btn btn-primary'/>
       </form>
     </div>
   <%- include('../partials/footer') %>
+  <%- include ../partials/formFormatter %>
   </body>
 </html>
