delete stores done

--- a/views/stores/delete-store.ejs
+++ b/views/stores/delete-store.ejs
@@ -6,12 +6,11 @@
     <%- include ../partials/menu-admin %>
 
     <div class='container'>
-      <form action='/admin/store/<%= store._id%>?_method=PUT' method="post">
+      <h2 class='text-center'>Are you sure you want to permanently delete this store?</h2>
+      <form action='/admin/store/<%= store._id%>?_method=DELETE' method="post">
         <div>
           <label>Name:</label>
-          <div class='col'>
-            <input type='text' name='name' value="<%= store.name %>" class="form-control"/>
-          </div>
+          <input type='text' name='name' value="<%= store.name %>"/>
         </div>
         <div>
           <label>Address:</label>
@@ -30,14 +29,23 @@
           <input type="text" name='postalCode' value='<%= store.address.postalCode %>'/>
         </div>
 
-        <input type='submit' value="Update" class='col-form-submit btn btn-primary'/>
+        <div class="container text-center">
+          <span class='col'>
+            <a href="/admin/" class="btn btn-outline-primary col" role="button" aria-pressed="true">Cancel</a>
+          </span>
+          <span class='col'>
+            <input type='submit' value="Delete" class='col col-form-submit btn btn-danger'/>
+          </span>
+        </div>
+
+
 
       </form>
 
-      <a href="/admin/store/<%= store._id %>/delete" class="float-right">Delete Permanently</a>
+
 
     </div>
     <%- include ../partials/footer %>
-    <%- include ../partials/formFormatter %>
+    <%- include ../partials/formFormatterPlainText %>
   </body>
 </html>
